--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 			</section>
 		</main>
 		<footer class="contacts">
-			<div class="containers">
+			<div class="container hvdvome">
 				<div class="flecsy">
 					<a href="./" class="logo-contacts link"><span class="loggo">Web</span>Studio</a>
 					<address class="info">
@@ -397,4 +397,3 @@
 		</footer>
 	</body>
 </html>
-
