--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
 			</div>
 		</header>
 		<main>
-			<section class="section ">
+			<section class="section">
 				<div class="container">
 					<h1 class="potfolio-title">Потфоліо</h1>
 					<ul class="filter list">
@@ -76,74 +76,92 @@
 					</ul>
 					<ul class="work-item list">
 						<li class="work-list">
-							<img src="./images/project1.jpg" alt="project1" width="370" height="294" />
-							<div class="work-data">
-							<h2 class="work-title">Технокряк</h2>
-							<p class="work-pre-title">Веб-сайт</p>
-							</div>
+							<a href="" class="work-link link"
+								><img src="./images/project1.jpg" alt="project1" width="370" height="294" />
+								<div class="work-data">
+									<h2 class="work-title">Технокряк</h2>
+									<p class="work-pre-title">Веб-сайт</p>
+								</div>
+							</a>
 						</li>
 						<li class="work-list">
-							<img src="./images/project2.jpg" alt="project2" width="370" height="294" />
-							<div class="work-data">
-							<h2 class="work-title">Постер New Orlean vs Golden Star</h2>
-							<p class="work-pre-title">Дизайн</p>
-							</div>
+							<a href="" class="work-link link"
+								><img src="./images/project2.jpg" alt="project2" width="370" height="294" />
+								<div class="work-data">
+									<h2 class="work-title">Постер New Orlean vs Golden Star</h2>
+									<p class="work-pre-title">Дизайн</p>
+								</div>
+							</a>
 						</li>
 						<li class="work-list">
-							<img src="./images/project3.jpg" alt="project3" width="370" height="294" />
-							<div class="work-data">
-							<h2 class="work-title">Ресторан Seafood</h2>
-							<p class="work-pre-title">Додаток</p>
-							</div>
+							<a href="" class="work-link link">
+								<img src="./images/project3.jpg" alt="project3" width="370" height="294" />
+								<div class="work-data">
+									<h2 class="work-title">Ресторан Seafood</h2>
+									<p class="work-pre-title">Додаток</p>
+								</div>
+							</a>
 						</li>
 						<li class="work-list">
-							<img src="./images/project4.jpg" alt="project4" width="370" height="294" />
-							<div class="work-data">
-							<h2 class="work-title">Проєкт Prime</h2>
-							<p class="work-pre-title">Маркетинг</p>
-							</div>
+							<a href="" class="work-link link">
+								<img src="./images/project4.jpg" alt="project4" width="370" height="294" />
+								<div class="work-data">
+									<h2 class="work-title">Проєкт Prime</h2>
+									<p class="work-pre-title">Маркетинг</p>
+								</div>
+							</a>
 						</li>
 						<li class="work-list">
-							<img src="./images/project5.jpg" alt="project5" width="370" height="294" />
-							<div class="work-data">
-							<h2 class="work-title">Проєкт Boxes</h2>
-							<p class="work-pre-title">Додаток</p>
-							</div>
+							<a href="" class="work-link link">
+								<img src="./images/project5.jpg" alt="project5" width="370" height="294" />
+								<div class="work-data">
+									<h2 class="work-title">Проєкт Boxes</h2>
+									<p class="work-pre-title">Додаток</p>
+								</div>
+							</a>
 						</li>
 						<li class="work-list">
-							<img src="./images/project6.jpg" alt="project6" width="370" height="294" />
-							<div class="work-data">
-							<h2 class="work-title">Inspiration has no Borders</h2>
-							<p class="work-pre-title">Веб-сайт</p>
-							</div>
+							<a href="" class="work-link link">
+								<img src="./images/project6.jpg" alt="project6" width="370" height="294" />
+								<div class="work-data">
+									<h2 class="work-title">Inspiration has no Borders</h2>
+									<p class="work-pre-title">Веб-сайт</p>
+								</div>
+							</a>
 						</li>
 						<li class="work-list">
-							<img src="./images/project7.jpg" alt="project7" width="370" height="294" />
-							<div class="work-data">
-							<h2 class="work-title">Видання Limited Edition</h2>
-							<p class="work-pre-title">Дизайн</p>
-							</div>
+							<a href="" class="work-link link">
+								<img src="./images/project7.jpg" alt="project7" width="370" height="294" />
+								<div class="work-data">
+									<h2 class="work-title">Видання Limited Edition</h2>
+									<p class="work-pre-title">Дизайн</p>
+								</div>
+							</a>
 						</li>
 						<li class="work-list">
-							<img src="./images/project8.jpg" alt="project8" width="370" height="294" />
-							<div class="work-data">
-							<h2 class="work-title">Проект LAB</h2>
-							<p class="work-pre-title">Маркетинг</p>
-							</div>
+							<a href="" class="work-link link">
+								<img src="./images/project8.jpg" alt="project8" width="370" height="294" />
+								<div class="work-data">
+									<h2 class="work-title">Проект LAB</h2>
+									<p class="work-pre-title">Маркетинг</p>
+								</div>
+							</a>
 						</li>
 						<li class="work-list">
-							<img src="./images/project9.jpg" alt="project9" width="370" height="294" />
-							<div class="work-data">
-							<h2 class="work-title">Growing Business</h2>
-							<p class="work-pre-title">Додаток</p>
-							</div>
+							<a href="" class="work-link link">
+								<img src="./images/project9.jpg" alt="project9" width="370" height="294" />
+								<div class="work-data">
+									<h2 class="work-title">Growing Business</h2>
+									<p class="work-pre-title">Додаток</p>
+								</div>
+							</a>
 						</li>
 					</ul>
 				</div>
 			</section>
 		</main>
-		<footer class="contacts ">
-			<div class="containers">
+		<footer class="contacts">
+			<div class="container hvdvome">
 				<div class="flecsy">
 					<a href="./" class="logo-contacts link"><span class="loggo">Web</span>Studio</a>
 					<address class="info">
@@ -201,6 +219,6 @@
 					</ul>
 				</div>
 			</div>
-		</footer>	
+		</footer>
 	</body>
 </html>
